--- a/source/catalog.html
+++ b/source/catalog.html
@@ -48,12 +48,9 @@
               <div class="product-card">
                 <a href="" class="product-card__image-link">
                   <picture>
-                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/chicken-500-desktop@2x.png">
-                    <source media="(min-width: 1440px)" srcset="img/catalog/chicken-500-desktop.png">
-                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/chicken-500-tablet@2x.png">
-                    <source media="(min-width: 768px)" srcset="img/catalog/chicken-500-tablet.png">
-                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/chicken-500@2x.png">
-                    <img class="product-card__image" src="img/catalog/chicken-500.png" width="140" height="112" alt="фото товара.">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/chicken-500-desktop.png 1x, img/catalog/chicken-500-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/catalog/chicken-500-tablet.png 1x, img/catalog/chicken-500-tablet@2x.png 2x">
+                    <img class="product-card__image" src="img/catalog/chicken-500.png" srcset="img/catalog/chicken-500@2x.png 2x" width="140" height="112" alt="фото товара.">
                   </picture>
                 </a>
                 <div class="product-card__info">
@@ -82,12 +79,9 @@
               <div class="product-card">
                 <a href="" class="product-card__image-link">
                   <picture>
-                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/chicken-1000-desktop@2x.png">
-                    <source media="(min-width: 1440px)" srcset="img/catalog/chicken-1000-desktop.png">
-                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/chicken-1000-tablet@2x.png">
-                    <source media="(min-width: 768px)" srcset="img/catalog/chicken-1000-tablet.png">
-                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/chicken-1000@2x.png">
-                    <img class="product-card__image" src="img/catalog/chicken-1000.png" width="140" height="112" alt="фото товара.">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/chicken-1000-desktop.png 1x, img/catalog/chicken-1000-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/catalog/chicken-1000-tablet.png 1x, img/catalog/chicken-1000-tablet@2x.png 2x">
+                    <img class="product-card__image" src="img/catalog/chicken-1000.png"  srcset="img/catalog/chicken-1000@2x.png 2x" width="140" height="112" alt="фото товара.">
                   </picture>
                 </a>
                 <div class="product-card__info">
@@ -116,12 +110,9 @@
               <div class="product-card">
                 <a href="" class="product-card__image-link">
                   <picture>
-                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/fish-500-desktop@2x.png">
-                    <source media="(min-width: 1440px)" srcset="img/catalog/fish-500-desktop.png">
-                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/fish-500-tablet@2x.png">
-                    <source media="(min-width: 768px)" srcset="img/catalog/fish-500-tablet.png">
-                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/fish-500@2x.png">
-                    <img class="product-card__image" src="img/catalog/fish-500.png" width="140" height="112" alt="фото товара.">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/fish-500-desktop.png 1x, img/catalog/fish-500-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/catalog/fish-500-tablet.png 1x, img/catalog/fish-500-tablet@2x.png 2x">
+                    <img class="product-card__image" src="img/catalog/fish-500.png" srcset="img/catalog/fish-500@2x.png 2x" width="140" height="112" alt="фото товара.">
                   </picture>
                 </a>
                 <div class="product-card__info">
@@ -150,12 +141,9 @@
               <div class="product-card">
                 <a href="" class="product-card__image-link">
                   <picture>
-                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/fish-1000-desktop@2x.png">
-                    <source media="(min-width: 1440px)" srcset="img/catalog/fish-1000-desktop.png">
-                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/fish-1000-tablet@2x.png">
-                    <source media="(min-width: 768px)" srcset="img/catalog/fish-1000-tablet.png">
-                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/fish-1000@2x.png">
-                    <img class="product-card__image" src="img/catalog/fish-1000.png" width="140" height="112" alt="фото товара.">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/fish-1000-desktop.png 1x, img/catalog/fish-1000-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/catalog/fish-1000-tablet.png 1x, img/catalog/fish-1000-tablet@2x.png 2x">
+                    <img class="product-card__image" src="img/catalog/fish-1000.png" srcset="img/catalog/fish-1000@2x.png 2x" width="140" height="112" alt="фото товара.">
                   </picture>
                 </a>
                 <div class="product-card__info">
@@ -184,12 +172,9 @@
               <div class="product-card">
                 <a href="" class="product-card__image-link">
                   <picture>
-                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/buckwheat-500-desktop@2x.png">
-                    <source media="(min-width: 1440px)" srcset="img/catalog/buckwheat-500-desktop.png">
-                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/buckwheat-500-tablet@2x.png">
-                    <source media="(min-width: 768px)" srcset="img/catalog/buckwheat-500-tablet.png">
-                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/buckwheat-500@2x.png">
-                    <img class="product-card__image" src="img/catalog/buckwheat-500.png" width="140" height="112" alt="фото товара.">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/buckwheat-500-desktop.png 1x, img/catalog/buckwheat-500-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/catalog/buckwheat-500-tablet.png 1x, img/catalog/buckwheat-500-tablet@2x.png 2x">
+                    <img class="product-card__image" src="img/catalog/buckwheat-500.png" srcset="img/catalog/buckwheat-500@2x.png 2x" width="140" height="112" alt="фото товара.">
                   </picture>
                 </a>
                 <div class="product-card__info">
@@ -218,12 +203,9 @@
               <div class="product-card">
                 <a href="" class="product-card__image-link">
                   <picture>
-                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/buckwheat-1000-desktop@2x.png">
-                    <source media="(min-width: 1440px)" srcset="img/catalog/buckwheat-1000-desktop.png">
-                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/buckwheat-1000-tablet@2x.png">
-                    <source media="(min-width: 768px)" srcset="img/catalog/buckwheat-1000-tablet.png">
-                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/buckwheat-1000@2x.png">
-                    <img class="product-card__image" src="img/catalog/buckwheat-1000.png" width="140" height="112" alt="фото товара.">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/buckwheat-1000-desktop.png 1x, img/catalog/buckwheat-1000-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/catalog/buckwheat-1000-tablet.png 1x, img/catalog/buckwheat-1000-tablet@2x.png 2x">
+                    <img class="product-card__image" src="img/catalog/buckwheat-1000.png" srcset="img/catalog/buckwheat-1000@2x.png 2x" width="140" height="112" alt="фото товара.">
                   </picture>
                 </a>
                 <div class="product-card__info">
@@ -252,12 +234,9 @@
               <div class="product-card">
                 <a href="" class="product-card__image-link">
                   <picture>
-                    <source media="(min-width: 1440px) and (min-resolution: 2dppx)" srcset="img/catalog/rice-500-desktop@2x.png">
-                    <source media="(min-width: 1440px)" srcset="img/catalog/rice-500-desktop.png">
-                    <source media="(min-width: 768px) and (min-resolution: 2dppx)" srcset="img/catalog/rice-500-tablet@2x.png">
-                    <source media="(min-width: 768px)" srcset="img/catalog/rice-500-tablet.png">
-                    <source media="(min-resolution: 2dppx)" srcset="img/catalog/rice-500@2x.png">
-                    <img class="product-card__image" src="img/catalog/rice-500.png" width="140" height="112" alt="фото товара.">
+                    <source media="(min-width: 1440px)" srcset="img/catalog/rice-500-desktop.png 1x, img/catalog/rice-500-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/catalog/rice-500-tablet.png 1x, img/catalog/rice-500-tablet@2x.png 2x">
+                    <img class="product-card__image" src="img/catalog/rice-500.png" srcset="img/catalog/rice-500@2x.png 2x" width="140" height="112" alt="фото товара.">
                   </picture>
                 </a>
                 <div class="product-card__info">
@@ -347,7 +326,9 @@
           </div>
         </div>
       </div>
-      <iframe class="location__map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1996.7929883483553!2d30.3172265!3d59.9687573!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1639561450926!5m2!1sru!2sru" width="320" height="362" style="border: 0;" allowfullscreen="" loading="lazy" title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург"></iframe>
+      <div class="location__map-container">
+        <iframe class="location__map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1996.7929883483553!2d30.3172265!3d59.9687573!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1639561450926!5m2!1sru!2sru" width="320" height="362" style="border: 0;" allowfullscreen="" loading="lazy" title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург"></iframe>
+      </div>
     </section>
   </main>
   <footer class="page-footer">
