--- a/source/form.html
+++ b/source/form.html
@@ -15,7 +15,7 @@
   <body class="page__body">
     <header class="page-header page-header--nojs">
       <div class="page-header__logo-container"><a href="index.html" class="page-header__logo"><img class="page-header__logo-image" src="img/header-logo.svg" width="34" height="38" alt="Логотип сайта."> </a><a href="index.html" class="page-header__logo"><img class="page-header__logo-image" src="img/header-logo2.svg" width="101" height="18" alt="Логотип сайта."></a></div>
-      <nav class="main-nav main-nav--opened main-nav--nojs">
+      <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
@@ -30,41 +30,65 @@
       <div class="page-form__wrapper">
         <h1 class="page-form__title">Подбор программы</h1>
         <p class="page-form__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</p>
-        <form class="page-form__data" action="https://echo.htmlacademy.ru/" method="get">
+        <form class="page-form__data" action="https://echo.htmlacademy.ru/" method="post">
           <fieldset class="page-form__fieldset">
+            <!-- для проверки состояния :invalid - page-form__input--invalid-->
             <section class="page-form__user-info">
               <h2 class="visually-hidden">данные кота</h2>
               <div class="page-form__input-wrapper">
-                <div class="page-form__input-container"><label class="page-form__label" for="user-name">ИМЯ:*</label> <input class="page-form__input" type="text" placeholder="БАРСИК" id="user-name" required></div>
-                <div class="page-form__input-container"><label class="page-form__label" for="user-weight">Вес (кг):*</label> <input class="page-form__input" type="text" placeholder="7" id="user-weight" required></div>
-                <div class="page-form__input-container"><label class="page-form__label" for="user-age">Возраст (лет):</label> <input class="page-form__input" type="text" placeholder="7" id="user-age"></div>
+                <div class="page-form__input-container">
+                  <label class="page-form__label" for="user-name">ИМЯ:*</label>
+                  <input class="page-form__input" type="text" placeholder="БАРСИК" id="user-name" required></div>
+                <div class="page-form__input-container">
+                  <label class="page-form__label" for="user-weight">Вес (кг):*</label>
+                  <input class="page-form__input" type="text" placeholder="7" id="user-weight" required></div>
+                <div class="page-form__input-container">
+                  <label class="page-form__label" for="user-age">Возраст (лет):</label>
+                  <input class="page-form__input" type="text" placeholder="7" id="user-age"></div>
               </div>
             </section>
             <section class="page-form__programm-choice">
               <h2 class="visually-hidden">выбор программы</h2>
               <div class="page-form__input-wrapper">
                 <ul class="page-form__list">
-                  <li class="page-form__item"><label class="page-form__control"><input class="visually-hidden page-form__control-input" type="radio" name="programm" value="slim" checked="checked"> <span class="page-form__control-mark page-form__control-mark--radio"></span> <span class="page-form__radio-label">Похудение</span></label></li>
-                  <li class="page-form__item"><label class="page-form__control"><input class="visually-hidden page-form__control-input" type="radio" name="programm" value="strong"> <span class="page-form__control-mark page-form__control-mark--radio"></span> <span class="page-form__radio-label">Набор массы</span></label></li>
-                  <li class="page-form__item"><label class="page-form__control"><input class="visually-hidden page-form__control-input" type="radio" name="programm" value="advice"> <span class="page-form__control-mark page-form__control-mark--radio"></span> <span class="page-form__radio-label">Не знаю (Нужен ваш совет)</span></label></li>
+                  <li class="page-form__item">
+                    <label class="page-form__control">
+                      <input class="visually-hidden page-form__control-input" type="radio" name="programm" value="slim" checked="checked" >
+                      <span class="page-form__control-mark page-form__control-mark--radio"></span>
+                      <span class="page-form__radio-label">Похудение</span>
+                    </label>
+                  </li>
+                  <li class="page-form__item">
+                    <label class="page-form__control">
+                      <input class="visually-hidden page-form__control-input" type="radio" name="programm" value="strong" > <span class="page-form__control-mark page-form__control-mark--radio" ></span> <span class="page-form__radio-label">Набор массы</span>
+                    </label>
+                  </li>
+                  <li class="page-form__item">
+                    <label class="page-form__control">
+                      <input class="visually-hidden page-form__control-input" type="radio" name="programm" value="advice"> <span class="page-form__control-mark page-form__control-mark--radio" ></span> <span class="page-form__radio-label">Не знаю (Нужен ваш совет)</span>
+                    </label>
+                  </li>
                 </ul>
               </div>
             </section>
           </fieldset>
           <fieldset class="page-form__fieldset">
+            <!-- для проверки состояния :invalid - page-form__input--invalid-->
             <section class="page-form__contacts-info">
               <div class="page-form__title-wrapper">
                 <h2 class="page-form__fieldset-title">Контактные данные (владельца кота)</h2>
               </div>
               <div class="page-form__input-wrapper">
                 <div class="page-form__input-container">
-                  <label class="page-form__label">E-mail:*</label> <input class="page-form__input" type="email" placeholder="kuklachev@gmail.com" required>
+                  <label class="page-form__label" for="email">E-mail:*</label>
+                  <input class="page-form__input" id="email" type="email" placeholder="kuklachev@gmail.com" required>
                   <svg class="page-form__input-email" width="20" height="15" viewBox="0 0 20 15" fill="none" stroke="#222222">
                     <use xlink:href="img/sprite.svg#email"></use>
                   </svg>
                 </div>
                 <div class="page-form__input-container">
-                  <label class="page-form__label">Телефон:*</label> <input class="page-form__input" type="tel" placeholder="8 (960) 900-60-90" required>
+                  <label class="page-form__label" for="phone">Телефон:*</label>
+                  <input class="page-form__input" id="phone" type="tel" placeholder="8 (960) 900-60-90" required>
                   <svg class="page-form__input-phone" width="20" height="21" viewBox="0 0 20 21" fill="black">
                     <use xlink:href="img/sprite.svg#phone"></use>
                   </svg>
@@ -75,9 +99,11 @@
           <fieldset class="page-form__fieldset">
             <section class="page-form__comment">
               <div class="page-form__title-wrapper">
-                <h2 class="page-form__fieldset-title">Комментарий</h2>
+              <h2 class="page-form__fieldset-title">Комментарий</h2>
               </div>
-              <div class="page-form__textarea-wrapper"><textarea class="page-form__textarea" name="comment" cols="39" rows="7" placeholder="Расскажите обо всех повадках кота"></textarea></div>
+              <div class="page-form__textarea-wrapper">
+                <label class="visually-hidden" for="comment">Комментарий</label>
+                <textarea class="page-form__textarea" id="comment" name="comment" cols="39" rows="7" placeholder="Расскажите обо всех повадках кота"></textarea></div>
             </section>
           </fieldset>
           <fieldset class="page-form__fieldset">
@@ -87,8 +113,20 @@
               </div>
               <div class="page-form__list-wrapper">
                 <ul class="page-form__list">
-                  <li class="page-form__item"><label class="page-form__control" for="shugar"><input class="visually-hidden page-form__control-input" type="checkbox" name="additionally" value="shugar" id="shugar" checked="checked"> <span class="page-form__control-mark page-form__control-mark--checkbox"></span> <span class="page-form__checkbox-label">сахарозаменитель</span></label></li>
-                  <li class="page-form__item"><label class="page-form__control" for="water-checkbox"><input class="visually-hidden page-form__control-input" type="checkbox" name="additionally" value="water" id="water-checkbox"> <span class="page-form__control-mark page-form__control-mark--checkbox"></span> <span class="page-form__checkbox-label">питьевая вода</span></label></li>
+                  <li class="page-form__item">
+                    <label class="page-form__control" for="shugar">
+                      <input class="visually-hidden page-form__control-input" type="checkbox" name="additionally" value="shugar" id="shugar" checked="checked">
+                      <span class="page-form__control-mark page-form__control-mark--checkbox"></span>
+                      <span class="page-form__checkbox-label">сахарозаменитель</span>
+                    </label>
+                  </li>
+                  <li class="page-form__item">
+                    <label class="page-form__control" for="water-checkbox">
+                      <input class="visually-hidden page-form__control-input" type="checkbox" name="additionally" value="water" id="water-checkbox">
+                      <span class="page-form__control-mark page-form__control-mark--checkbox"></span>
+                      <span class="page-form__checkbox-label">питьевая вода</span>
+                    </label>
+                  </li>
                   <li class="page-form__item"><label class="page-form__control" for="milk-checkbox"><input class="visually-hidden page-form__control-input" type="checkbox" name="additionally" value="milk" id="milk-checkbox"> <span class="page-form__control-mark page-form__control-mark--checkbox"></span> <span class="page-form__checkbox-label">молоко</span></label></li>
                   <li class="page-form__item"><label class="page-form__control" for="vitamins-checkbox"><input class="visually-hidden page-form__control-input" type="checkbox" name="additionally" value="vitamins" id="vitamins-checkbox"> <span class="page-form__control-mark page-form__control-mark--checkbox"></span> <span class="page-form__checkbox-label">витамины</span></label></li>
                 </ul>
@@ -102,7 +140,7 @@
           </fieldset>
         </form>
       </div>
-      <section class="location location-inner">
+      <section class="location location--inner">
         <h2 class="visually-hidden">Как до нас добраться</h2>
         <div class="location__container">
           <div class="location__address">
@@ -148,8 +186,8 @@
           </ul>
         </div>
         <div class="page-footer__academy-container">
-          <a class="page-footer__academy-link" href="#">HTML Academy</a>
-          <a class="page-footer__academy-link-logo" href="#">
+          <a class="page-footer__academy-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <a class="page-footer__academy-link-logo" href="https://htmlacademy.ru/intensive/adaptive">
             <svg width="27" height="34" fill="#666">
               <use xlink:href="img/sprite.svg#html-logo"></use>
             </svg>
