--- a/source/index.html
+++ b/source/index.html
@@ -14,14 +14,29 @@
   </head>
   <body class="page__body">
     <header class="page-header page-header--nojs">
-      <div class="page-header__logo-container"><a href="index.html" class="page-header__logo"><img class="page-header__logo-image" src="img/header-logo.svg" width="34" height="38" alt="Логотип сайта."> </a><a href="index.html" class="page-header__logo"><img class="page-header__logo-image" src="img/header-logo2.svg" width="101" height="18" alt="Логотип сайта."></a></div>
-      <nav class="main-nav main-nav--opened main-nav--nojs">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="page-header__logo-container">
+        <a href="index.html" class="page-header__logo">
+          <img class="page-header__logo-image" src="img/header-logo.svg" width="34" height="38" alt="Логотип сайта.">
+        </a>
+        <a href="index.html" class="page-header__logo">
+          <img class="page-header__logo-image" src="img/header-logo2.svg" width="101" height="18" alt="Логотип сайта.">
+        </a>
+      </div>
+      <nav class="main-nav main-nav--closed main-nav--nojs">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list main-nav__list--background">
-            <li class="main-nav__item main-nav__item--current"><a href="index.html">Главная</a></li>
-            <li class="main-nav__item"><a href="catalog.html">каталог продукции</a></li>
-            <li class="main-nav__item"><a href="form.html">подбор программы</a></li>
+            <li class="main-nav__item main-nav__item--current">
+              <a href="index.html">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="catalog.html">каталог продукции</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="form.html">подбор программы</a>
+            </li>
           </ul>
         </div>
       </nav>
@@ -34,7 +49,7 @@
           <picture>
             <source type="image/webp" media="(min-width: 1440px)" srcset="img/main-logo-desktop.webp, img/main-logo-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)" srcset="img/main-logo-tablet.webp, img/main-logo-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/main-logo-mobile.webp, img/main-logo-mobile@2x.webp 2x" width="280" height="270" alt="Банка корма.">
+            <source type="image/webp" srcset="img/main-logo-mobile.webp, img/main-logo-mobile@2x.webp 2x">
             <source media="(min-width: 1440px)" srcset="img/main-logo-desktop.png, img/main-logo-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/main-logo-tablet.png, img/main-logo-tablet@2x.png 2x">
             <img class="main-logo__image" src="img/main-logo-mobile.png" srcset="img/main-logo-mobile@2x.png 2x" width="280" height="270" alt="Банка корма.">
@@ -101,16 +116,28 @@
             <div class="main-example__image-wrapper">
               <div class="main-example__fat-cat-wrapper">
                 <picture>
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/image-cat-tablet.webp, img/image-cat-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/fat-cat-mobile.webp, img/fat-cat-mobile@2x.webp 2x">
                   <source media="(min-width: 768px)" srcset="img/image-cat-tablet.png, img/image-cat-tablet@2x.png 2x">
                   <img class="main-example__fat-cat-image" src="img/fat-cat-mobile.png" srcset="img/fat-cat-mobile@2x.png 2x" width="280" height="232" alt="фото толстого кота.">
                 </picture>
               </div>
-              <div class="main-example__skinny-cat-wrapper"><img class="main-example__skinny-cat-image" src="img/skinny-cat-tablet.png" srcset="img/skinny-cat-tablet@2x.png 2x" alt="фото худого кота."></div>
+              <div class="main-example__skinny-cat-wrapper">
+                <picture>
+                  <source type="image/webp" srcset="img/skinny-cat-tablet.webp, img/skinny-cat-tablet@2x.webp 2x">
+                  <img class="main-example__skinny-cat-image" src="img/skinny-cat-tablet.png" srcset="img/skinny-cat-tablet@2x.png 2x" width="545" height="511" alt="фото худого кота.">
+                </picture>
+              </div>
             </div>
             <div class="main-example__range-slider">
-              <button class="main-example__button">было</button> <span class="visually-hidden">было</span>
-              <div class="main-example__range-scale"><button class="main-example__range-button" type="button"></button> <span class="visually-hidden">Изменить состояние</span></div>
-              <button class="main-example__button">стало</button> <span class="visually-hidden">стало</span>
+              <button class="main-example__button">было</button>
+               <span class="visually-hidden">было</span>
+              <div class="main-example__range-scale">
+                <button class="main-example__range-button" type="button"></button>
+                 <span class="visually-hidden">Изменить состояние</span>
+                </div>
+              <button class="main-example__button">стало</button>
+               <span class="visually-hidden">стало</span>
             </div>
           </div>
         </div>
@@ -126,12 +153,15 @@
             </div>
           </div>
         </div>
-        <div class="location__map-container"><iframe class="location__map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1996.7929883483553!2d30.3172265!3d59.9687573!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1639561450926!5m2!1sru!2sru" width="320" height="362" style="border: 0;" allowfullscreen="" loading="lazy" title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург"></iframe></div>
+        <div class="location__map-container">
+          <iframe class="location__map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1996.7929883483553!2d30.3172265!3d59.9687573!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1639561450926!5m2!1sru!2sru" width="320" height="362" style="border: 0;" allowfullscreen="" loading="lazy" title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург"></iframe>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="page-footer__link"><img src="img/footer-logo-cat-energy.svg" width="128" height="24" alt="название сайта."></a>
+        <a class="page-footer__link">
+          <img src="img/footer-logo-cat-energy.svg" width="128" height="24" alt="название сайта."></a>
         <div class="social-container">
           <ul class="social-container__list">
             <li class="social-container__item social-container__item--vk">
@@ -161,8 +191,8 @@
           </ul>
         </div>
         <div class="page-footer__academy-container">
-          <a class="page-footer__academy-link" href="#">HTML Academy</a>
-          <a class="page-footer__academy-link-logo" href="#">
+          <a class="page-footer__academy-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <a class="page-footer__academy-link-logo" href="https://htmlacademy.ru/intensive/adaptive">
             <svg width="27" height="34" fill="#666">
               <use xlink:href="img/sprite.svg#html-logo"></use>
             </svg>
