правки по замечаниям проверяющего наставника

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,7 @@
   </head>
   <body class="page__body">
     <header class="page-header page-header--nojs">
-      <div class="page-header__logo-container"><a href="index.html" class="page-header__logo"><img class="page-header__logo-image" src="img/header-logo.svg" width="34" height="38" alt="Логотип сайта."> </a><a href="index.html" class="page-header__logo"><img class="page-header__logo-image" src="img/header-logo2.svg" width="101" height="18" alt="Логотип сайта."></a></div>
+      <div class="page-header__logo-container"><a href="index.html" class="page-header__logo"><img class="page-header__logo-image" src="img/header-logo.svg" width="34" height="38" alt="Логотип-ссылка на сайт Cat-energy."> </a><a href="index.html" class="page-header__logo"><img class="page-header__logo-image" src="img/header-logo2.svg" width="101" height="18" alt="Логотип-ссылка на сайт Cat-energy."></a></div>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
@@ -38,7 +38,7 @@
                     <picture>
                       <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/chicken-500-desktop.webp, img/catalog/chicken-500-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/chicken-500-tablet.webp, img/catalog/chicken-500-tablet@2x.webp 2x">
-                      <source type="image/webp" srcset="iimg/catalog/chicken-500.webp, img/catalog/chicken-500@2x.webp 2x">
+                      <source type="image/webp" srcset="img/catalog/chicken-500.webp, img/catalog/chicken-500@2x.webp 2x">
                       <source media="(min-width: 1440px)" srcset="img/catalog/chicken-500-desktop.png, img/catalog/chicken-500-desktop@2x.png 2x">
                       <source media="(min-width: 768px)" srcset="img/catalog/chicken-500-tablet.png, img/catalog/chicken-500-tablet@2x.png 2x">
                       <img class="product-card__image" src="img/catalog/chicken-500.png" srcset="img/catalog/chicken-500@2x.png 2x" width="140" height="112" alt="фото товара.">
@@ -74,7 +74,7 @@
                     <picture>
                       <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/chicken-1000-desktop.webp, img/catalog/chicken-1000-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/chicken-1000-tablet.webp, img/catalog/chicken-1000-tablet@2x.webp 2x">
-                      <source type="image/webp" srcset="iimg/catalog/chicken-1000.webp, img/catalog/chicken-1000@2x.webp 2x">
+                      <source type="image/webp" srcset="img/catalog/chicken-1000.webp, img/catalog/chicken-1000@2x.webp 2x">
                       <source media="(min-width: 1440px)" srcset="img/catalog/chicken-1000-desktop.png, img/catalog/chicken-1000-desktop@2x.png 2x">
                       <source media="(min-width: 768px)" srcset="img/catalog/chicken-1000-tablet.png, img/catalog/chicken-1000-tablet@2x.png 2x">
                       <img class="product-card__image" src="img/catalog/chicken-1000.png" srcset="img/catalog/chicken-1000@2x.png 2x" width="140" height="112" alt="фото товара.">
@@ -110,7 +110,7 @@
                     <picture>
                       <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/fish-500-desktop.webp, img/catalog/fish-500-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/fish-500-tablet.webp, img/catalog/fish-500-tablet@2x.webp 2x">
-                      <source type="image/webp" srcset="iimg/catalog/fish-500.webp, img/catalog/fish-500@2x.webp 2x">
+                      <source type="image/webp" srcset="img/catalog/fish-500.webp, img/catalog/fish-500@2x.webp 2x">
                       <source media="(min-width: 1440px)" srcset="img/catalog/fish-500-desktop.png, img/catalog/fish-500-desktop@2x.png 2x">
                       <source media="(min-width: 768px)" srcset="img/catalog/fish-500-tablet.png, img/catalog/fish-500-tablet@2x.png 2x">
                       <img class="product-card__image" src="img/catalog/fish-500.png" srcset="img/catalog/fish-500@2x.png 2x" width="140" height="112" alt="фото товара.">
@@ -146,7 +146,7 @@
                     <picture>
                       <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/fish-1000-desktop.webp, img/catalog/fish-1000-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/fish-1000-tablet.webp, img/catalog/fish-1000-tablet@2x.webp 2x">
-                      <source type="image/webp" srcset="iimg/catalog/fish-1000.webp, img/catalog/fish-1000@2x.webp 2x">
+                      <source type="image/webp" srcset="img/catalog/fish-1000.webp, img/catalog/fish-1000@2x.webp 2x">
                       <source media="(min-width: 1440px)" srcset="img/catalog/fish-1000-desktop.png, img/catalog/fish-1000-desktop@2x.png 2x">
                       <source media="(min-width: 768px)" srcset="img/catalog/fish-1000-tablet.png, img/catalog/fish-1000-tablet@2x.png 2x">
                       <img class="product-card__image" src="img/catalog/fish-1000.png" srcset="img/catalog/fish-1000@2x.png 2x" width="140" height="112" alt="фото товара.">
@@ -182,7 +182,7 @@
                     <picture>
                       <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/buckwheat-500-desktop.webp, img/catalog/buckwheat-500-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/buckwheat-500-tablet.webp, img/catalog/buckwheat-500-tablet@2x.webp 2x">
-                      <source type="image/webp" srcset="iimg/catalog/buckwheat-500.webp, img/catalog/buckwheat-500@2x.webp 2x">
+                      <source type="image/webp" srcset="img/catalog/buckwheat-500.webp, img/catalog/buckwheat-500@2x.webp 2x">
                       <source media="(min-width: 1440px)" srcset="img/catalog/buckwheat-500-desktop.png, img/catalog/buckwheat-500-desktop@2x.png 2x">
                       <source media="(min-width: 768px)" srcset="img/catalog/buckwheat-500-tablet.png, img/catalog/buckwheat-500-tablet@2x.png 2x">
                       <img class="product-card__image" src="img/catalog/buckwheat-500.png" srcset="img/catalog/buckwheat-500@2x.png 2x" width="140" height="112" alt="фото товара.">
@@ -218,7 +218,7 @@
                     <picture>
                       <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/buckwheat-1000-desktop.webp, img/catalog/buckwheat-1000-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/buckwheat-1000-tablet.webp, img/catalog/buckwheat-1000-tablet@2x.webp 2x">
-                      <source type="image/webp" srcset="iimg/catalog/buckwheat-1000.webp, img/catalog/buckwheat-1000@2x.webp 2x">
+                      <source type="image/webp" srcset="img/catalog/buckwheat-1000.webp, img/catalog/buckwheat-1000@2x.webp 2x">
                       <source media="(min-width: 1440px)" srcset="img/catalog/buckwheat-1000-desktop.png, img/catalog/buckwheat-1000-desktop@2x.png 2x">
                       <source media="(min-width: 768px)" srcset="img/catalog/buckwheat-1000-tablet.png, img/catalog/buckwheat-1000-tablet@2x.png 2x">
                       <img class="product-card__image" src="img/catalog/buckwheat-1000.png" srcset="img/catalog/buckwheat-1000@2x.png 2x" width="140" height="112" alt="фото товара.">
@@ -254,7 +254,7 @@
                     <picture>
                       <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/rice-500-desktop.webp, img/catalog/rice-500-desktop@2x.webp 2x">
                       <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/rice-500-tablet.webp, img/catalog/rice-500-tablet@2x.webp 2x">
-                      <source type="image/webp" srcset="iimg/catalog/rice-500.webp, img/catalog/rice-500@2x.webp 2x">
+                      <source type="image/webp" srcset="img/catalog/rice-500.webp, img/catalog/rice-500@2x.webp 2x">
                       <source media="(min-width: 1440px)" srcset="img/catalog/rice-500-desktop.png, img/catalog/rice-500-desktop@2x.png 2x">
                       <source media="(min-width: 768px)" srcset="img/catalog/rice-500-tablet.png, img/catalog/rice-500-tablet@2x.png 2x">
                       <img class="product-card__image" src="img/catalog/rice-500.png" srcset="img/catalog/rice-500@2x.png 2x" width="140" height="112" alt="фото товара.">
@@ -355,7 +355,7 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="page-footer__link"><img src="img/footer-logo-cat-energy.svg" width="128" height="24" alt="название сайта."></a>
+        <a class="page-footer__link"><img src="img/footer-logo-cat-energy.svg" width="128" height="24" alt="Логотип-ссылка на сайт Cat-energy."></a>
         <div class="social-container">
           <ul class="social-container__list">
             <li class="social-container__item social-container__item--vk">
@@ -389,6 +389,7 @@
             <svg width="27" height="34" fill="#666">
               <use xlink:href="img/sprite.svg#html-logo"></use>
             </svg>
+            <span class="visually-hidden">Сыылка на сайт HTML-Academy</span>
           </a>
         </div>
       </div>
