--- a/source/form.html
+++ b/source/form.html
@@ -14,7 +14,7 @@
   </head>
   <body class="page__body">
     <header class="page-header page-header--nojs">
-      <div class="page-header__logo-container"><a href="index.html" class="page-header__logo"><img class="page-header__logo-image" src="img/header-logo.svg" width="34" height="38" alt="Логотип сайта."> </a><a href="index.html" class="page-header__logo"><img class="page-header__logo-image" src="img/header-logo2.svg" width="101" height="18" alt="Логотип сайта."></a></div>
+      <div class="page-header__logo-container"><a href="index.html" class="page-header__logo"><img class="page-header__logo-image" src="img/header-logo.svg" width="34" height="38" alt="Логотип-ссылка на сайт Cat-energy."> </a><a href="index.html" class="page-header__logo"><img class="page-header__logo-image" src="img/header-logo2.svg" width="101" height="18" alt="Логотип-ссылка на сайт Cat-energy."></a></div>
       <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
@@ -151,12 +151,16 @@
             </div>
           </div>
         </div>
-        <div class="location__map-container"><iframe class="location__map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1996.7929883483553!2d30.3172265!3d59.9687573!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1639561450926!5m2!1sru!2sru" width="320" height="362" style="border: 0;" allowfullscreen="" loading="lazy" title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург"></iframe></div>
+        <div class="location__map-container">
+          <iframe class="location__map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1996.7929883483553!2d30.3172265!3d59.9687573!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1639561450926!5m2!1sru!2sru" width="320" height="362" style="border: 0;" allowfullscreen="" loading="lazy" title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург"></iframe>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="page-footer__link"><img src="img/footer-logo-cat-energy.svg" width="128" height="24" alt="название сайта."></a>
+        <a class="page-footer__link">
+          <img src="img/footer-logo-cat-energy.svg" width="128" height="24" alt="Логотип-ссылка на сайт Cat-energy.">
+        </a>
         <div class="social-container">
           <ul class="social-container__list">
             <li class="social-container__item social-container__item--vk">
@@ -191,6 +195,7 @@
             <svg width="27" height="34" fill="#666">
               <use xlink:href="img/sprite.svg#html-logo"></use>
             </svg>
+            <span class="visually-hidden">Ссылка на сайт HTML-Academy</span>
           </a>
         </div>
       </div>
