--- a/source/index.html
+++ b/source/index.html
@@ -16,10 +16,10 @@
     <header class="page-header page-header--nojs">
       <div class="page-header__logo-container">
         <a href="index.html" class="page-header__logo">
-          <img class="page-header__logo-image" src="img/header-logo.svg" width="34" height="38" alt="Логотип сайта.">
+          <img class="page-header__logo-image" src="img/header-logo.svg" width="34" height="38" alt="Логотип-ссылка на сайт Cat-energy.">
         </a>
         <a href="index.html" class="page-header__logo">
-          <img class="page-header__logo-image" src="img/header-logo2.svg" width="101" height="18" alt="Логотип сайта.">
+          <img class="page-header__logo-image" src="img/header-logo2.svg" width="101" height="18" alt="Логотип-ссылка на сайт Cat-energy.">
         </a>
       </div>
       <nav class="main-nav main-nav--closed main-nav--nojs">
@@ -133,8 +133,9 @@
               <button class="main-example__button">было</button>
               <span class="visually-hidden">было</span>
               <div class="main-example__range-scale">
-                <button class="main-example__range-button" type="button"></button>
-                <span class="visually-hidden">Изменить состояние</span>
+                <button class="main-example__range-button" type="button">
+                  <span class="visually-hidden">Изменить состояние</span>
+                </button>
                 </div>
               <button class="main-example__button">стало</button>
               <span class="visually-hidden">стало</span>
@@ -160,8 +161,8 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="page-footer__link">
-          <img src="img/footer-logo-cat-energy.svg" width="128" height="24" alt="название сайта."></a>
+        <a class="page-footer__link" href="#">
+          <img src="img/footer-logo-cat-energy.svg" width="128" height="24" alt="Логотип-ссылка на сайт Cat-energy."></a>
         <div class="social-container">
           <ul class="social-container__list">
             <li class="social-container__item social-container__item--vk">
@@ -196,6 +197,7 @@
             <svg width="27" height="34" fill="#666">
               <use xlink:href="img/sprite.svg#html-logo"></use>
             </svg>
+            <span class="visually-hidden">Сыылка на сайт HTML-Academy</span>
           </a>
         </div>
       </div>
